--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,6 +1,6 @@
 <style>
     .image-gallery {overflow: auto; margin-left: -1%!important;}
-    .image-gallery li {float: left; display: block; margin: 0 0 1% 1%; width: 19%;}
+    .image-gallery li {float: left; display: block; margin: 0 0 1% 1%; width: 20%;}
     .image-gallery li a {text-align: center; text-decoration: none!important; color: #777;}
     .image-gallery li a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0;}
     .image-gallery li a img {width: 100%; display: block;}
@@ -18,8 +18,8 @@
     {% assign filename = filenameparts | last | replace: file.extname,"" %}
   <li>
     <a href="{{ file.path | relative_url }}" title="{{ filename }}">
-    <img src="//images.weserv.nl/?url={{ site.url }}{{ file.path | relative_url }}&w=300&h=300&output=jpg&q=100&t=square"
-    alt="{{ filename.alt }}" title="{{ filename.alt }}" /><span>{{ filename }}</span></a></li>{% endif %}{% endif %}{% endfor %}</ul>
+    <img src="//images.weserv.nl/?url={{ site.url }}{{ file.path | relative_url }}&w=300&h=300&output=jpg&q=50&t=square"
+    alt="{{ filename.alt }}" title="{{ filename }}" /><span>{{ filename }}</span></a></li>{% endif %}{% endif %}{% endfor %}</ul>
 
 
 
